--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -302,6 +302,7 @@ a {
             text-decoration: none;
             color: #fff;
             background: #dc3545;
+            border-top: 1px solid #fff;
         }
 
         .sidebar-nav > li > a i.fa {
