--- a/BloodBank.Management.Web/Views/Donations/Create.cshtml
+++ b/BloodBank.Management.Web/Views/Donations/Create.cshtml
@@ -35,58 +35,52 @@
         </div>
         <div class="blood-unity-box-card-content">
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group mb-3">
-                @Html.LabelFor(model => model.DonorId, htmlAttributes: new { @class = "control-label col-md-2 mb-1" })
-                <div class="col-md-12">
-                    @Html.DropDownListFor(model => model.DonorId, new SelectList(ViewBag.Donors, "Id", "Name", Model?.DonorId == null ? 0 : Model.DonorId), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.DonorId, "", new { @class = "text-danger" })
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group mb-3">
+                    @Html.LabelFor(model => model.DonorId, htmlAttributes: new { @class = "control-label col-md-2 mb-1" })
+                    <div class="col-md-12">
+                        @Html.DropDownListFor(model => model.DonorId, new SelectList(ViewBag.Donors, "Id", "Name", Model?.DonorId == null ? 0 : Model.DonorId), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.DonorId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group mb-3">
-                @Html.LabelFor(model => model.RecipientId, htmlAttributes: new { @class = "control-label col-md-2  mb-1" })
-                <div class="col-md-12">
-                    @Html.DropDownListFor(model => model.RecipientId, new SelectList(ViewBag.Recipients, "Id", "Name", Model?.RecipientId == null ? 0 : Model.RecipientId), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.RecipientId, "", new { @class = "text-danger" })
+                <div class="form-group mb-3">
+                    @Html.LabelFor(model => model.RecipientId, htmlAttributes: new { @class = "control-label col-md-2  mb-1" })
+                    <div class="col-md-12">
+                        @Html.DropDownListFor(model => model.RecipientId, new SelectList(ViewBag.Recipients, "Id", "Name", Model?.RecipientId == null ? 0 : Model.RecipientId), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.RecipientId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group mb-3">
-                @Html.LabelFor(model => model.DonationDate, htmlAttributes: new { @class = "control-label col-md-2  mb-1" })
-                <div class="col-md-12">
-                    @Html.EditorFor(model => model.DonationDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DonationDate, "", new { @class = "text-danger" })
+                <div class="form-group mb-3">
+                    @Html.LabelFor(model => model.DonationDate, htmlAttributes: new { @class = "control-label col-md-2  mb-1" })
+                    <div class="col-md-12">
+                        @Html.EditorFor(model => model.DonationDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DonationDate, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group mb-3">
-                @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2  mb-1" })
-                <div class="col-md-12">
-                    @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                <div class="form-group mb-3">
+                    @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2  mb-1" })
+                    <div class="col-md-12">
+                        @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="mt-3 col-sm-12 text-right">
-                    <button type="submit" class="btn btn-default save-btn">
-                        <i class="fa fa-plus pr-5" aria-hidden="true"></i> Save
-                    </button>
+                <div class="form-group">
+                    <div class="mt-3 col-sm-12 text-right">
+                        <button type="submit" class="btn btn-default save-btn">
+                            <i class="fa fa-plus pr-5" aria-hidden="true"></i> Save
+                        </button>
+                    </div>
                 </div>
-            </div>
-
+            }
         </div>
     </div>
-</div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-
     <div id="QuantityInfo">
 
     </div>
@@ -100,6 +94,16 @@
             </div>
         }
     </div>
+</div>
+
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Create" class="btn btn-default" />
+    </div>
+</div>
+
+
+
 
 
 @section Scripts {
