--- a/BloodBank.Management.Web/Views/Donations/Details.cshtml
+++ b/BloodBank.Management.Web/Views/Donations/Details.cshtml
@@ -3,54 +3,81 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="app-content">
+    <div class="root-description">
+        <span>Home</span> / <span>Donors</span>  / <span>Details</span>
+    </div>
 
-<h2>Details</h2>
+    <div class="blood-unity-box-card">
+        <div class="blood-unity-box-card-header">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="blood-unity-box-card-title">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-eye blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        <b>Details</b>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <button class="add-btn ml-5">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-edit blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        <a href="@Url.Action( "Edit", "Donations", new { id = Model.Id })">Edit</a>
+                    </button>
+                    <button class="add-btn">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-arrow-left blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        @Html.ActionLink("Back", "Index", "Donations")
+                    </button>
 
-<div>
-    <h4>Donation</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Donor)
-        </dt>
+                </div>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Donor)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.BloodGroup)
-        </dt>
+        </div>
+        <div class="blood-unity-box-card-content">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Donor)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BloodGroup)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Recipient)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Donor)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BloodGroup)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Recipient)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.BloodGroup)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Recipient)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DonationDate)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Recipient)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DonationDate)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DonationDate)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.DonationDate)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Quantity)
+                </dt>
 
-    </dl>
+                <dd>
+                    @Html.DisplayFor(model => model.Quantity)
+                </dd>
+
+            </dl>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
